--- a/cv-project/src/App.css
+++ b/cv-project/src/App.css
@@ -1,1 +1,55 @@
+body {
+  display: flex;
+  justify-content: center;
+  margin: 1rem;
+}
+
+.mainContainer {
+  border: solid 1px black;
+  width: 50vw;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  padding: 1rem;
+  gap: 1rem;
+}
+.topContainer {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  gap: 1rem;
+  width: 100%;
+  height: 100%;
+}
+
+.bottomContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  width: 100%;
+  height: 100%;
+}
+
+.generalInfo {
+  border: solid 1px black;
+  width: 100%;
+  height: 100%;
+}
+
+.education {
+  border: solid 1px black;
+  width: 100%;
+  height: 100%;
+}
+
+.projects {
+  border: solid 1px black;
+  width: 100%;
+  height: 100%;
+}
+
+.experience {
+  border: solid 1px black;
+  width: 100%;
+  height: 100%;
+}
 
