--- a/cv-project/src/App.css
+++ b/cv-project/src/App.css
@@ -56,6 +56,12 @@ body {
   height: 100%;
 }
 
+.hidden {
+  display: none;
+}
+.visible {
+  display: block;
+}
 .formHeader {
   margin: 1rem;
   margin-bottom: 1.5rem;
