--- a/cv-project/src/App.css
+++ b/cv-project/src/App.css
@@ -79,15 +79,37 @@ body {
   margin: 1rem;
 }
 
+.infoForm {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  grid-template-rows: 0.5fr 0.5fr 1fr 1fr;
+  width: 100%;
+  height: 100%;
+}
+
 .name {
-  
+background-color: aqua;
+grid-column: 1/3;
+grid-row: 1/3;
 }
 
 .phone {
-
+  background-color: rgb(43, 255, 0);
+  grid-column: 1/2;
+  grid-row: 4/5;
 }
 
 .email {
-
+  background-color: rgb(255, 0, 0);
+  grid-column: 1/2;
+  grid-row: 3/4;
 }
+
+.photo {
+  background-color: rgb(38, 0, 255);
+  grid-column: 2/3;
+  grid-row: 3/5;
+}
+
+
 
