--- a/cv-project/src/App.css
+++ b/cv-project/src/App.css
@@ -81,34 +81,60 @@ body {
 
 .infoForm {
   display: grid;
-  grid-template-columns: 1.5fr 1fr;
-  grid-template-rows: 0.5fr 0.5fr 1fr 1fr;
+  grid-template-columns: 1.3fr 1fr;
+  grid-template-rows: 0.4fr 0.4fr 1fr 1fr;
   width: 100%;
   height: 100%;
 }
 
 .name {
-background-color: aqua;
+background-color: rgba(255, 244, 179, 0.747);
 grid-column: 1/3;
 grid-row: 1/3;
+display: flex;
+align-items: center;
+padding-left: 1rem;
+color: rgb(0, 0, 0);
+font-size: 2rem;
 }
 
 .phone {
-  background-color: rgb(43, 255, 0);
+  background-color: rgba(255, 244, 179, 0.747);
   grid-column: 1/2;
   grid-row: 4/5;
+  padding-left: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  font-size: 1.2rem;
 }
 
 .email {
-  background-color: rgb(255, 0, 0);
+  background-color: rgba(255, 244, 179, 0.747);
   grid-column: 1/2;
   grid-row: 3/4;
+  padding-left: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  font-size: 1.2rem;
 }
 
 .photo {
-  background-color: rgb(38, 0, 255);
+  background-color: rgba(255, 255, 255, 0.747);
   grid-column: 2/3;
-  grid-row: 3/5;
+  grid-row: 1/5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact {
+  font-size: 1.4rem;
+  font-weight: 500;
+  
 }
 
 
