--- a/cv-project/src/App.css
+++ b/cv-project/src/App.css
@@ -7,13 +7,13 @@ body {
 
 .mainContainer {
   border: solid 1px black;
-  width: 50vw;
+  width: 55vw;
   height: 100vh;
   display: grid;
   grid-template-rows: 1fr 1fr;
   padding: 1rem;
   gap: 1rem;
-  background-color: rgba(255, 244, 179, 0.747);
+  background-color: rgb(255, 255, 255);
 }
 .topContainer {
   display: grid;
@@ -79,15 +79,15 @@ body {
   margin: 1rem;
 }
 
-.infoForm {
+/* .infoForm {
   display: grid;
   grid-template-columns: 1.3fr 1fr;
   grid-template-rows: 0.4fr 0.4fr 1fr 1fr;
   width: 100%;
   height: 100%;
-}
+} */
 
-.name {
+/* .name {
 background-color: rgba(255, 244, 179, 0.747);
 grid-column: 1/3;
 grid-row: 1/3;
@@ -108,9 +108,9 @@ font-size: 2rem;
   flex-direction: column;
   gap: 1rem;
   font-size: 1.2rem;
-}
+} */
 
-.email {
+/* .email {
   background-color: rgba(255, 244, 179, 0.747);
   grid-column: 1/2;
   grid-row: 3/4;
@@ -135,7 +135,7 @@ font-size: 2rem;
   font-size: 1.4rem;
   font-weight: 500;
   
-}
+} */
 
 
 
