--- a/cv-project/src/App.css
+++ b/cv-project/src/App.css
@@ -3,19 +3,20 @@ body {
   flex-direction: column;
   font-family: 'Lato', sans-serif;
   margin: 0;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(255, 250, 240);
 }
 
 .pageHeader {
   padding: 2rem;
   margin: 0;
-  background-color: rgb(200, 248, 248);
+  background-color: rgb(224, 255, 255);
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.589)
 }
 
 .mainContainer {
-  width: 50vw;
+  width: 40vw;
   height: 100vh;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(255, 250, 240);
   border-radius: 0.6px;
   padding-left: 2rem;
   border-right: solid 1px black;
