--- a/cv-project/src/App.css
+++ b/cv-project/src/App.css
@@ -29,11 +29,15 @@ body {
 .generalInfo {
   width: 100%;
   height: 35%;
+  border-bottom: solid 1px black;
+  padding-bottom: 1.5rem;
 }
 
 .education {
   width: 100%;
   height: 100%;
+  border-bottom: solid 1px black;
+  padding-bottom: 1.5rem;
 }
 
 .projects {
@@ -44,6 +48,8 @@ body {
 .experience {
   width: 100%;
   height: 100%;
+  border-bottom: solid 1px black;
+  padding-bottom: 1.5rem;
 }
 
 .formHeader {
