--- a/cv-project/src/App.css
+++ b/cv-project/src/App.css
@@ -7,22 +7,40 @@ body {
 }
 
 .pageHeader {
-  padding: 1.7rem;
+  padding: 2.2rem;
   margin: 0;
   background-color: rgb(224, 255, 255);
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.589);
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.50);
   z-index: 10;
   position: sticky;
   top: 0;
 }
+.pageContainer {
+  height: 100%;
+  display: flex;
+}
+.cvContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 60vw;
+  margin: 3rem;
+  margin-left: 7.5rem;
+  margin-right: 7.5rem;
+  border: solid 1px black;
+  background-color: rgba(240, 240, 240, 0.534);
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.322);
+}
 
-.mainContainer {
+
+.formContainer {
   width: 40vw;
   height: 100%;
   background-color: rgb(255, 250, 240);
   border-radius: 0.6px;
   padding-left: 2rem;
   border-right: solid 1px black;
+  font-size: 1.2rem
 }
 
 
@@ -30,14 +48,14 @@ body {
   width: 100%;
   height: 35%;
   border-bottom: solid 1px black;
-  padding-bottom: 1.5rem;
+  padding-bottom: 1.8rem;
 }
 
 .education {
   width: 100%;
   height: 100%;
   border-bottom: solid 1px black;
-  padding-bottom: 1.5rem;
+  padding-bottom: 1.8rem;
 }
 
 .projects {
@@ -49,7 +67,7 @@ body {
   width: 100%;
   height: 100%;
   border-bottom: solid 1px black;
-  padding-bottom: 1.5rem;
+  padding-bottom: 1.8rem;
 }
 
 .formHeader {
@@ -57,10 +75,10 @@ body {
 }
 
 .inputDiv {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.7rem;
   display: flex;
   flex-direction: column;
-  gap: 0.2rem;
+  gap: 0.4rem;
   width: 80%;
 }
 
@@ -69,6 +87,7 @@ body {
   background-color: rgb(224, 255, 255);
   border: solid 1px black;
   padding: 0.3rem;
+  font-size: 0.95rem;
 }
 
 /* .infoForm {
