--- a/cv-project/src/App.css
+++ b/cv-project/src/App.css
@@ -28,7 +28,7 @@ body {
   margin-left: 6rem;
   margin-right: 6rem;
   border: solid 1px black;
-  background-color: rgba(240, 240, 240, 0.534);
+  background-color: rgb(255, 255, 255);
   box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.322);
 }
 
