--- a/cv-project/src/App.css
+++ b/cv-project/src/App.css
@@ -21,8 +21,7 @@ body {
 }
 .cvContainer {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
   width: 60vw;
   margin: 3rem;
   margin-left: 6rem;
@@ -90,63 +89,48 @@ body {
   font-size: 0.95rem;
 }
 
-/* .infoForm {
-  display: grid;
-  grid-template-columns: 1.3fr 1fr;
-  grid-template-rows: 0.4fr 0.4fr 1fr 1fr;
-  width: 100%;
-  height: 100%;
-} */
+.cvHeader {
+  height: 15%;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  border-bottom: solid 1px black;
+}
 
-/* .name {
-background-color: rgba(255, 244, 179, 0.747);
-grid-column: 1/3;
-grid-row: 1/3;
-display: flex;
-align-items: center;
-padding-left: 1rem;
-color: rgb(0, 0, 0);
-font-size: 2rem;
+.picture {
+  height: 100%;
+  width: 20%;
+  background-color: rgb(255, 0, 0);
+}
+
+.info {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5rem;
+  gap: 1rem;
+  justify-content: space-evenly;
+  padding-left: 3rem;
+  width: 80%;
+}
+
+
+.name {
+  font-size: 2rem;
+
+}
+
+.email {
+  font-style: italic;
 }
 
 .phone {
-  background-color: rgba(255, 244, 179, 0.747);
-  grid-column: 1/2;
-  grid-row: 4/5;
-  padding-left: 1rem;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  gap: 1rem;
-  font-size: 1.2rem;
-} */
-
-/* .email {
-  background-color: rgba(255, 244, 179, 0.747);
-  grid-column: 1/2;
-  grid-row: 3/4;
-  padding-left: 1rem;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  gap: 1rem;
-  font-size: 1.2rem;
+  font-style: italic;
 }
 
-.photo {
-  background-color: rgba(255, 255, 255, 0.747);
-  grid-column: 2/3;
-  grid-row: 1/5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+#hidden {
+  display: none;
 }
 
-.contact {
-  font-size: 1.4rem;
-  font-weight: 500;
-  
-} */
 
 
 
