--- a/cv-project/src/App.css
+++ b/cv-project/src/App.css
@@ -99,7 +99,7 @@ body {
 .picture {
   height: 100%;
   width: 20%;
-  background-color: rgb(255, 0, 0);
+  background-color: rgb(167, 234, 255);
 }
 
 .info {
@@ -127,10 +127,40 @@ body {
   font-style: italic;
 }
 
-#hidden {
-  display: none;
+.experienceHeader {
+  padding: 1rem;
+  background-color: rgb(167, 234, 255);
+  margin: 0;
+  margin-bottom: 1rem;
+  
+}
+.experienceDiv {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.experienceParent {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
 }
 
+.title {
+  padding-left: 1rem;
+  font-size: 1.5rem;
+}
+
+.companyLocation {
+  padding-left: 1rem;
+  font-style: italic;
+  font-size: 1.2rem;
+}
+
+.duration {
+  padding-left: 1rem;
+  font-size: 1.2rem;
+  font-style: italic;
+}
 
 
 
