finished education styling

--- a/cv-project/src/App.css
+++ b/cv-project/src/App.css
@@ -221,6 +221,12 @@ body {
   gap: 0.3rem;
 }
 
+.educationDiv {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
 .school {
   padding-left: 1rem;
 }
